# apex-digital

./: Makefile  README.md  docker-compose.yaml  inference_distributions.json  inference_results.json  main.py  pyproject.toml
config/: __init__.py  logger.py  settings.py
data/processed/: data_final.parquet
deployment/fastapi/: Dockerfile
deployment/mlflow/: Dockerfile  docker-compose.yaml
deployment/redis/: docker-compose.yaml
mlruns/0/: meta.yaml
notebooks/: eda.ipynb  exploracion.ipynb  exploration.ipynb
src/: elt.py  inference.py  selection.py  split.py  training.py
src/serving/: api.py  registry.py  schemas.py  service.py  transforms.py
src/utils/: elt.py  inference_models.py  metrics.py  mlflow_utils.py  processors.py  schemas.py  training_utils.py  utils_fn.py
